--- a/dashboard-page.html
+++ b/dashboard-page.html
@@ -11,6 +11,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<!-- Compiled and minified JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  
 </head>
 
 <body  >
@@ -62,6 +63,7 @@
         </div>
       </div>
     </div>
+    
     <div class="journey valign-wrapper center-align" style="width:100%; height:50%; background-color:#264653;">
       <div class="container">
         <ol class="progress-track" style="margin:auto;">
@@ -211,7 +213,7 @@
   <!-- Modal Structure -->
   <div id="card-action-shuffle" class="modal modal-layer1" style="min-height:80%; min-width:90%!important">
     <div id="dashboard-modal-content" class="content-full valign-wrapper center-align action-show modal-action-cards">
-      <div class="card-wrapper" style="">
+      <div class="card-wrapper" >
       <ul class="card-list">
         <li class="card-list__item" data-card="0">
           <div class="card-shuffle">
